# rust-ai-proxy

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile  init_models.sh  set_env.sh
src/: airs.rs  main.rs  ollama.rs
