[package]
name = "rust_ai_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1.7", features = ["v4"] }