[package]
name = "rust_ai_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["trace"] }
reqwest = { version = "0.12", features = ["json"] }
hyper = "1.2" # Pour Body / Request manipulation
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }